# fastapi-sqlmodel-demo

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
server/: database.py  errors.py  models.py  settings.py
server/course/: apis.py  router.py  schemas.py
server/user/: apis.py  router.py  schemas.py
server/utils/: pagination.py  response.py  schemas.py
sh/: gen-models.sh  gen-sqlmodels.sh
