[project]
name = "fastapi-sqlmodel-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "fastapi>=0.115.12",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "sqlacodegen>=3.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
